Fixed a few layout issues

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,8 +17,8 @@ body {
 }
 
 .container {
-    height: 50vh;
-    width: 500px;
+    // height: 50vh;
+    // width: 500px;
 
     img {
         width: 95%;
